feat:启动页 test:新闻列表，优化模拟登录逻辑

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,17 +59,21 @@
             android:text="登  录"
             app:cornerRadius="12dp" />
 
+
+        <!--隐藏起来先-->
         <TextView
             android:id="@+id/tv_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.user.account}" />
+            android:text="@{viewModel.user.account}"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tv_pwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.user.pwd}" />
+            android:text="@{viewModel.user.pwd}"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
