--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,12 +9,18 @@
 
     <!--必应页面样式-->
     <style name="ImgTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/lightslategray</item>
         <item name="colorPrimaryDark">@color/lightslategray</item>
         <item name="colorAccent">@color/white</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+    <!--图片页面样式，侵入状态栏-->
+    <style name="ImageTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
 
 
     <!--ShapeableImageView 圆角-->
@@ -23,6 +29,11 @@
         <item name="cornerSize">15%</item>
     </style>
 
+    <!--ShapeableImageView 新闻圆角-->
+    <style name="RoundedNewStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8%</item>
+    </style>
 
     <!--ShapeableImageView 圆 -->
     <style name="CircleStyle">
@@ -30,18 +41,20 @@
         <item name="cornerSize">50%</item>
     </style>
 
-    <!--图片页面样式，侵入状态栏-->
-    <style name="ImageTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:background">@android:color/transparent</item>
-        <item name="android:statusBarColor" tools:targetApi="lollipop">@android:color/transparent</item>
-        <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:windowTranslucentNavigation">true</item>
-    </style>
 
     <!--启动页的主题样式-->
     <style name="SplashTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:statusBarColor" tools:targetApi="lollipop">#00FFFFFF</item><!--设置状态栏的颜色-->
     </style>
 
+    <!--选中的样式-->
+    <style name="bottom_tab_title_active">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <!--没有选中的样式，导航默认的字体大小就是14sp-->
+    <style name="bottom_tab_title_inactive">
+        <item name="android:textSize">14sp</item>
+    </style>
 
 </resources>
