feat:完成启动页；图片、新闻、视频展示页的黑夜白天模式适配

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_alignParentBottom="true"
-            android:background="@color/white"
+            android:background="@color/bg_bnav"
             app:menu="@menu/navigation_menu"
             app:itemIconTint="@drawable/selector_bnva"
             app:itemTextColor="@drawable/selector_bnva"
