--- a/app/src/main/res/layout/item_new_show_pic.xml
+++ b/app/src/main/res/layout/item_new_show_pic.xml
@@ -27,7 +27,7 @@
             android:maxLines="3"
             android:text="@{newsBean.title}"
             android:textSize="18sp"
-            android:textColor="@color/black"
+            android:textColor="@color/news_brc_title_color"
             android:minHeight="60dp"/>
 
         <com.example.androidmvvmtest.view.CustomImageView
@@ -52,6 +52,7 @@
             android:textSize="12sp"
             android:maxLines="1"
             android:maxLength="15"
+            android:textColor="@color/news_brc_src_time_color"
             android:ellipsize="end"/>
 
         <TextView
@@ -65,6 +66,7 @@
             android:text="@{newsBean.time}"
             android:textSize="12sp"
             android:maxLines="1"
+            android:textColor="@color/news_brc_src_time_color"
             android:maxLength="11"
             android:ellipsize="end"/>
 
@@ -74,7 +76,9 @@
             android:layout_alignParentBottom="true"
             android:layout_below="@id/tv_time"
             android:layout_marginTop="10dp"
-            android:background="@color/lavender" />
+            android:background="@color/news_brc_src_time_color"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
 
     </RelativeLayout>
 
