--- a/app/src/main/res/layout/item_video_show_pic.xml
+++ b/app/src/main/res/layout/item_video_show_pic.xml
@@ -17,7 +17,7 @@
         <RelativeLayout
             android:id="@+id/vide_show_pic"
             android:layout_width="120dp"
-            android:layout_height="80dp"
+            android:layout_height="100dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:padding="0dp">
@@ -53,8 +53,8 @@
             android:maxLines="3"
             android:minHeight="60dp"
             android:text="@{videoBean.title}"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textColor="@color/news_brc_title_color"/>
 
         <TextView
             android:id="@+id/tv_author"
@@ -67,7 +67,8 @@
             android:maxLength="15"
             android:maxLines="1"
             android:text="@{videoBean.author}"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:textColor="@color/news_brc_src_time_color"/>
 
         <TextView
             android:id="@+id/tv_hot_value"
@@ -81,7 +82,8 @@
             android:maxLength="20"
             android:maxLines="1"
             android:text='@{String.format("%d 热度", videoBean.hot_value)}'
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:textColor="@color/news_brc_src_time_color"/>
 
         <TextView
             android:id="@+id/tv_hot_word"
@@ -95,7 +97,8 @@
             android:maxLength="11"
             android:maxLines="1"
             android:text='@{videoBean.hot_words}'
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:textColor="@color/news_brc_src_time_color"/>
 
         <View
             android:layout_width="match_parent"
@@ -103,7 +106,9 @@
             android:layout_below="@id/tv_hot_word"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="10dp"
-            android:background="@color/lavender" />
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@color/news_brc_src_time_color" />
 
     </RelativeLayout>
 
