--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,9 +9,11 @@
 
     <!--必应页面样式-->
     <style name="ImgTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!--下面表示状态栏使用暗色，也就是黑色-->
+        <item name="android:windowLightStatusBar">true</item>
         <item name="colorPrimary">@color/lightslategray</item>
         <item name="colorPrimaryDark">@color/lightslategray</item>
-        <item name="colorAccent">@color/white</item>
+        <!--        <item name="colorAccent">@color/white</item>-->
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
@@ -20,7 +22,6 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
-
 
 
     <!--ShapeableImageView 圆角-->
@@ -44,7 +45,10 @@
 
     <!--启动页的主题样式-->
     <style name="SplashTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:statusBarColor" tools:targetApi="lollipop">#00FFFFFF</item><!--设置状态栏的颜色-->
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/white</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
     <!--选中的样式-->
