--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -53,10 +53,12 @@
 
     <!--启动页的主题样式-->
     <style name="SplashTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:windowLightStatusBar">false</item>
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryDark">@color/black</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="colorPrimary">@color/bg_bnav_icon_text_selected</item>
+        <item name="colorPrimaryVariant">@color/bg_bnav_icon_text_selected</item>
+        <item name="statusBarBackground">@color/bg_bnav_icon_text_selected</item>
+        <item name="android:statusBarColor">@color/bg_bnav_icon_text_selected</item>
+        <item name="android:windowBackground">@drawable/splash_bg</item>
     </style>
 
     <!--登录页面-->
